--- a/Lectures/SQL: Try It Yourself.ipynb
+++ b/Lectures/SQL: Try It Yourself.ipynb
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
           "height": 459
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +558,7 @@
         },
         "outputId": "80b5a522-f102-488d-f348-3c2961543ea9"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +913,7 @@
         "id": "WUKrBv-pFTPd",
         "outputId": "3d26a30a-8fdb-4abf-fcc8-ea98b4f98e47"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1239,7 +1239,7 @@
         "id": "36rX6hanGw7I",
         "outputId": "1c3c7a80-afce-47a0-f0b0-b26bfb34d9e4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1606,7 +1606,7 @@
         "id": "kgakFEhlGCXH",
         "outputId": "d9d21606-8595-42f4-b420-254eac5e3ac1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2095,6 +2095,53 @@
           },
           "metadata": {},
           "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hEa_TB-KQ49o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "lesson 4"
+      ],
+      "metadata": {
+        "id": "T91-6DfBQ7CF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate Average Book Rating by Genre\n",
+        "\n",
+        "%%sql\n",
+        "SELECT b.Genre, AVG(br.Rating) AS AverageRating\n",
+        "FROM Books b INNER JOIN BookRatings br\n",
+        "ON b.BookID = br.BookID\n",
+        "GROUP BY b.Genre;"
+      ],
+      "metadata": {
+        "id": "6hTul6s5RAXa",
+        "outputId": "7bd60c89-7a8c-4813-920c-7d7db6432cb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "UsageError: Cell magic `%%sql` not found.\n"
+          ]
         }
       ]
     }
