--- a/GreenMark Building information - Ingestion using SQL.ipynb
+++ b/GreenMark Building information - Ingestion using SQL.ipynb
@@ -51,12 +51,12 @@
       "cell_type": "code",
       "metadata": {
         "id": "config_main",
-        "outputId": "2e2ec06a-6555-48fd-bb57-21ca04403fa8",
+        "outputId": "d384d17e-de1c-419e-e253-20f8ba10f479",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
         "\n",
         "# Dataset Settings\n",
         "DATASET_FILENAME = \"GreenMarkBuildings.csv\"  # Your CSV filename\n",
-        "DATASET_URL = \"https://drive.google.com/file/d/14aQ4zT5QTHiJINXBSfKdO-53jmxcjV-W/view?usp=drive_link\"\n",
+        "DATASET_URL = \"https://drive.google.com/file/d/14aQ4zT5QTHiJINXBSfKdO-53jmxcjV-W/view?usp=sharing\"\n",
         "\n",
         "# ============================================\n",
         "# GOOGLE COLAB PATHS\n",
@@ -130,10 +130,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GqGOOiZTGbcP"
+        "id": "GqGOOiZTGbcP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1796fdd-e9c7-4007-b1eb-291167e585f9"
       },
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Dataset file already exists: /content/project/GreenMark Buildings/data/GreenMarkBuildings.csv\n",
+            "ls: cannot access '/content/project/GreenMark': No such file or directory\n",
+            "ls: cannot access 'Buildings/data/GreenMarkBuildings.csv': No such file or directory\n"
+          ]
+        }
+      ],
       "source": [
         "# ============================================\n",
         "# DATA DOWNLOAD\n",
